11.21(1) Isaac