@@ -1,12 +1,17 @@
 package com.himedia.spserver.service;
 
+import com.himedia.spserver.dto.MemberDTO;
+import com.himedia.spserver.dto.StyleFollowerCountDTO;
 import com.himedia.spserver.dto.StylePostDTO;
+import com.himedia.spserver.dto.StylePostHashtagDTO;
 import com.himedia.spserver.entity.File;
 import com.himedia.spserver.entity.Follow;
 import com.himedia.spserver.entity.Member;
 import com.himedia.spserver.entity.STYLE.*;
 import com.himedia.spserver.repository.*;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -29,10 +34,9 @@ public class StyleService {
     private final MemberRepository memberRepository;
     private final FileRepository fileRepository;
     private final FollowRepository followRepository;
-    private final S3UploadService sus;
+    private final S3UploadService s3UploadService;
 
-
-    private List<String> getAllImageUrls(STYLE_post post) {
+    public List<String> getAllImageUrls(STYLE_post post) {
         return fileRepository.findByPost(post)
                 .stream()
                 .map(File::getPath)
@@ -40,14 +44,13 @@ public class StyleService {
     }
 
     public List<StylePostDTO> getPostsByUseridDTO(String userid) {
-        List<STYLE_post> posts = findPostsByUserid(userid);
+        List<STYLE_post> posts = postRepository.findAllByMember_UseridOrderByIndateDesc(userid);
 
         return posts.stream().map(post -> {
             List<String> imageUrls = getAllImageUrls(post);
             List<String> hashtags = posthashRepository.findByPostId(post)
                     .stream().map(ph -> ph.getTagId().getWord())
                     .collect(Collectors.toList());
-
             int likeCount = likeRepository.countBySpost(post);
             int replyCount = replyRepository.countBySpost(post);
 
@@ -67,74 +70,64 @@ public class StyleService {
         }).collect(Collectors.toList());
     }
 
-    private List<STYLE_post> findPostsByUserid(String userid) {
-        return postRepository.findAllByMember_UseridOrderByIndateDesc(userid);
-    }
-
-
-    // 전체 피드 조회
     public List<StylePostDTO> getAllPosts() {
-        List<STYLE_post> posts = postRepository.findAllByOrderByIndateDesc();
 
-        return posts.stream().map(post -> {
-            int likeCount = likeRepository.countBySpost(post);
-            int replyCount = replyRepository.countBySpost(post);
-            List<String> hashtags = posthashRepository.findByPostId(post)
-                    .stream().map(ph -> ph.getTagId().getWord())
-                    .collect(Collectors.toList());
+        // 1. 게시글 + 멤버 한 번에 조회 (Q1: 1 query - Fetch Join 사용)
+        List<STYLE_post> posts = postRepository.findAllWithMemberOrderByIndateDesc();
 
-            List<String> imageUrls = fileRepository.findAllByPost(post)
-                    .stream()
-                    .map(File::getPath)
-                    .collect(Collectors.toList());
+        // 2. 관련 데이터 한 번에 조회 (Q2-Q5: 4 queries - IN 절 Batch Loading)
+        List<Integer> allIds = posts.stream()
+                .map(STYLE_post::getSpostId)
+                .toList();
 
-            return StylePostDTO.builder()
-                    .spost_id(post.getSpostId())
-                    .title(post.getTitle())
-                    .content(post.getContent())
-                    .s_images(imageUrls)
-                    .indate(post.getIndate())
-                    .likeCount(likeCount)
-                    .replyCount(replyCount)
-                    .userid(post.getMember().getUserid())
-                    .profileImg(post.getMember().getProfileImg())
-                    .hashtags(hashtags)
-                    .build();
-        }).collect(Collectors.toList());
-    }
+        if (allIds.isEmpty()) {
+            return List.of();
+        }
 
-    public void save(STYLE_post post) {
-        postRepository.save(post);
-    }
+        // 3. 관련 데이터 한 번에 조회
+        List<STYLE_Like> allLikes = likeRepository.findBySpost_SpostIdIn(allIds);
+        List<STYLE_Reply> allReplies = replyRepository.findBySpost_SpostIdIn(allIds);
+        List<StylePostHashtagDTO> postHashtagDTOs = posthashRepository.findHashtagsByPostIds(allIds);
+        List<File> allFiles = fileRepository.findByPost_SpostIdIn(allIds);
 
-    // 단일 게시물 조회
-    public StylePostDTO getPostDetail(Integer id) {
-        STYLE_post post = postRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
+        // 4. Map으로 매핑
+        Map<Integer, Long> likeCountMap = allLikes.stream()
+                .collect(Collectors.groupingBy(l -> l.getSpost().getSpostId(), Collectors.counting()));
 
-        int likeCount = likeRepository.countBySpost(post);
-        int replyCount = replyRepository.countBySpost(post);
-        List<String> hashtags = posthashRepository.findByPostId(post)
-                .stream().map(ph -> ph.getTagId().getWord())
-                .collect(Collectors.toList());
+        Map<Integer, Long> replyCountMap = allReplies.stream()
+                .collect(Collectors.groupingBy(r -> r.getSpost().getSpostId(), Collectors.counting()));
 
-        List<String> imageUrls = fileRepository.findAllByPost(post)
-                .stream()
-                .map(File::getPath)
-                .collect(Collectors.toList());
+        Map<Integer, List<String>> hashtagMap = postHashtagDTOs.stream()
+                .collect(Collectors.groupingBy(
+                        StylePostHashtagDTO::postId,
+                        Collectors.mapping(StylePostHashtagDTO::word, Collectors.toList())
+                ));
 
-        return StylePostDTO.builder()
+        Map<Integer, List<String>> fileMap = allFiles.stream()
+                .collect(Collectors.groupingBy(
+                        f -> f.getPost().getSpostId(),
+                        Collectors.mapping(File::getPath, Collectors.toList())
+                ));
+
+        // 5. DTO 변환
+        return posts.stream().map(post -> StylePostDTO.builder()
                 .spost_id(post.getSpostId())
                 .title(post.getTitle())
                 .content(post.getContent())
-                .s_images(imageUrls)
+                .s_images(fileMap.getOrDefault(post.getSpostId(), List.of()))
+                .hashtags(hashtagMap.getOrDefault(post.getSpostId(), List.of()))
                 .indate(post.getIndate())
-                .likeCount(likeCount)
-                .replyCount(replyCount)
+                .likeCount(likeCountMap.getOrDefault(post.getSpostId(), 0L).intValue())
+                .replyCount(replyCountMap.getOrDefault(post.getSpostId(), 0L).intValue())
                 .userid(post.getMember().getUserid())
                 .profileImg(post.getMember().getProfileImg())
-                .hashtags(hashtags)
-                .build();
+                .build()
+        ).toList();
+    }
+
+
+    public void save(STYLE_post post) {
+        postRepository.save(post);
     }
 
     public void saveStylePost(String title, String content, List<MultipartFile> images, String userid, List<String> hashtags) {
@@ -143,32 +136,30 @@ public class StyleService {
             if (member == null) throw new RuntimeException("사용자를 찾을 수 없습니다.");
 
             STYLE_post post = new STYLE_post();
-            post.setTitle(title); // 제목 저장
+            post.setTitle(title);
             post.setContent(content);
             post.setIndate(new Timestamp(System.currentTimeMillis()));
             post.setMember(member);
             postRepository.save(post);
 
-            // 이미지 저장 (S3)
             if (images != null && !images.isEmpty()) {
                 for (MultipartFile image : images) {
-                    String fileUrl = sus.saveFile(image); // S3 업로드
-
+                    String fileUrl = s3UploadService.saveFile(image);
                     File postFile = new File();
                     postFile.setPost(post);
-                    postFile.setPath(fileUrl); // S3 URL 저장
+                    postFile.setPath(fileUrl);
                     postFile.setOriginalname(image.getOriginalFilename());
-                    postFile.setSize(Long.valueOf(image.getSize())); // 파일 크기
-                    postFile.setContentType(image.getContentType()); // 파일 타입
-
-                    fileRepository.save(postFile); // FileRepository로 저장
+                    postFile.setSize(Long.valueOf(image.getSize()));
+                    postFile.setContentType(image.getContentType());
+                    fileRepository.save(postFile);
                 }
             }
 
-            // 해시태그 처리
             if (hashtags != null && !hashtags.isEmpty()) {
                 for (String rawTag : hashtags) {
-                    String word = rawTag.replaceAll("[#\\s]", "");
+                    String word = rawTag.replaceAll("[#\\s]", "").trim();
+                    if (word.isEmpty()) continue;
+
                     STYLE_Hashtag tag = hashtagRepository.findByWord(word)
                             .orElseGet(() -> {
                                 STYLE_Hashtag newTag = new STYLE_Hashtag();
@@ -183,7 +174,6 @@ public class StyleService {
                 }
             }
         } catch (IOException e) {
-            e.printStackTrace();
             throw new RuntimeException("Image upload failed", e);
         }
     }
@@ -212,7 +202,6 @@ public class StyleService {
         return Map.of("liked", liked, "likeCount", likeCount);
     }
 
-     //✅ 팔로우 토글 (팔로우 중이면 취소, 아니면 등록)
     public boolean toggleFollow(String startUserid, String endUserid) {
         Member startMember = memberRepository.findByUserid(startUserid);
         Member endMember = memberRepository.findByUserid(endUserid);
@@ -224,19 +213,18 @@ public class StyleService {
         return followRepository.findByStartMemberAndEndMember(startMember, endMember)
                 .map(existing -> {
                     followRepository.delete(existing);
-                    return false; // 언팔로우
+                    return false;
                 })
                 .orElseGet(() -> {
                     Follow newFollow = new Follow();
                     newFollow.setStartMember(startMember);
                     newFollow.setEndMember(endMember);
                     followRepository.save(newFollow);
-                    return true; // 팔로우 성공
+                    return true;
                 });
     }
 
 
-    // ✅ 팔로우 상태 확인
     public boolean isFollowing(String startUserid, String endUserid) {
         Member startMember = memberRepository.findByUserid(startUserid);
         Member endMember = memberRepository.findByUserid(endUserid);
@@ -247,13 +235,14 @@ public class StyleService {
         return followRepository.findByStartMemberAndEndMember(startMember, endMember).isPresent();
     }
 
+
     public STYLE_post findBySpostId(Integer id) {
         return postRepository.findBySpostId(id)
                 .orElseThrow(() -> new RuntimeException("Post를 찾을 수 없습니다"));
-
     }
 
-    public Object countLikes(Integer id) {
+
+    public int countLikes(Integer id) {
         STYLE_post post = findBySpostId(id);
         return likeRepository.countBySpost(post);
     }
@@ -269,12 +258,16 @@ public class StyleService {
                     map.put("profileImg", r.getMemberid().getProfileImg());
                     map.put("content", r.getContent());
                     map.put("indate", r.getIndate());
+                    map.put("parentId", r.getParent() != null ? r.getParent().getReply_id() : null);
+                    map.put("isOpen", false);
+
                     return map;
                 })
                 .collect(Collectors.toList());
     }
 
-    public Object findHashtags(Integer id) {
+
+    public List<String> findHashtags(Integer id) {
         STYLE_post post = findBySpostId(id);
         return posthashRepository.findByPostId(post)
                 .stream()
@@ -290,18 +283,23 @@ public class StyleService {
         reply.setSpost(post);
         reply.setMemberid(member);
         reply.setContent(content);
+
+        if (parentId != null) {
+            STYLE_Reply parent = replyRepository.findById(parentId)
+                    .orElseThrow(() -> new RuntimeException("부모 댓글 없음"));
+            reply.setParent(parent);
+        }
+
         reply.setIndate(new Timestamp(System.currentTimeMillis()));
         replyRepository.save(reply);
 
-        // 새로 추가한 댓글만 반환
-        Map<String, Object> result = new HashMap<>();
-        result.put("reply_id", reply.getReply_id());
-        result.put("userid", reply.getMemberid().getUserid());
-        result.put("profileImg", reply.getMemberid().getProfileImg());
-        result.put("content", reply.getContent());
-        result.put("indate", reply.getIndate());
-
-        return result;
+        return Map.of(
+                "reply_id", reply.getReply_id(),
+                "userid", reply.getMemberid().getUserid(),
+                "profileImg", reply.getMemberid().getProfileImg(),
+                "content", reply.getContent(),
+                "indate", reply.getIndate()
+        );
     }
 
     public void deleteReply(Integer replyId, String userid) {
@@ -323,26 +321,21 @@ public class StyleService {
             throw new RuntimeException("본인 게시글만 삭제할 수 있습니다.");
         }
 
-        // 파일 삭제 가능 (S3, DB)
-        // 댓글 삭제
+        // 댓글, 좋아요, 해시태그 매핑 삭제
         replyRepository.deleteAll(replyRepository.findBySpost(post));
-
-        // 좋아요 삭제
         likeRepository.deleteAllBySpost(post);
-
-        // 해시태그 매핑 삭제
         posthashRepository.deleteAll(posthashRepository.findByPostId(post));
 
+        // 이미지 삭제
         List<File> files = fileRepository.findByPost(post);
         for (File f : files) {
-            sus.deleteFile(f.getPath()); // S3 실제 삭제
+            s3UploadService.deleteFile(f.getPath());
         }
         fileRepository.deleteAll(files);
 
         postRepository.delete(post);
     }
 
-    // 게시글 수정
     public void editPost(Integer spostId,
                          String userid,
                          String title,
@@ -354,50 +347,40 @@ public class StyleService {
         STYLE_post post = postRepository.findById(spostId)
                 .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다."));
 
-        // 작성자 확인
         if (!post.getMember().getUserid().equals(userid)) {
             throw new RuntimeException("본인 게시글만 수정할 수 있습니다.");
         }
 
-        // 게시글 내용 수정
         post.setTitle(title);
         post.setContent(content);
         postRepository.save(post);
 
-        // 기존 이미지 유지/삭제
         List<File> currentFiles = fileRepository.findByPost(post);
         if (existingImages != null) {
-            // 삭제할 이미지 필터링
             List<File> filesToDelete = currentFiles.stream()
                     .filter(f -> !existingImages.contains(f.getPath()))
                     .toList();
             for (File f : filesToDelete) {
-                sus.deleteFile(f.getPath());  // S3 삭제 추가
+                s3UploadService.deleteFile(f.getPath());
             }
             fileRepository.deleteAll(filesToDelete);
         } else {
-            // 기존 이미지 전부 삭제
             fileRepository.deleteAll(currentFiles);
         }
 
-        // 새 이미지 업로드
         if (newImages != null && !newImages.isEmpty()) {
             for (MultipartFile image : newImages) {
-                String fileUrl = sus.saveFile(image); // S3 업로드
-
+                String fileUrl = s3UploadService.saveFile(image);
                 File postFile = new File();
                 postFile.setPost(post);
                 postFile.setPath(fileUrl);
                 postFile.setOriginalname(image.getOriginalFilename());
                 postFile.setSize(Long.valueOf(image.getSize()));
                 postFile.setContentType(image.getContentType());
-
                 fileRepository.save(postFile);
             }
         }
 
-        // 해시태그 처리
-        // 기존 매핑 삭제
         List<STYLE_Posthash> existingTags = posthashRepository.findByPostId(post);
         posthashRepository.deleteAll(existingTags);
 
@@ -405,6 +388,7 @@ public class StyleService {
             for (String rawTag : hashtags) {
                 String word = rawTag.replaceAll("[#\\s]", "").trim();
                 if (word.isEmpty()) continue;
+
                 STYLE_Hashtag tag = hashtagRepository.findByWord(word)
                         .orElseGet(() -> {
                             STYLE_Hashtag newTag = new STYLE_Hashtag();
@@ -421,112 +405,297 @@ public class StyleService {
     }
 
     public List<StylePostDTO> getAllPostsOrderByLikesDTO() {
+
+        // 1) 인기순 게시글 목록 조회 (N+1 발생 X)
         List<STYLE_post> posts = postRepository.findAllOrderByLikeCountDesc();
-        return convertToDTO(posts);
+        if (posts.isEmpty()) return Collections.emptyList();
+
+        // 포스트 ID 목록 추출
+        List<Integer> postIds = posts.stream()
+                .map(STYLE_post::getSpostId)
+                .toList();
+
+        // 2) 좋아요 한꺼번에 가져오기
+        Map<Integer, List<STYLE_Like>> likeMap =
+                likeRepository.findAllBySpostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(l -> l.getSpost().getSpostId()));
+
+        // 3) 댓글 한꺼번에 가져오기
+        Map<Integer, List<STYLE_Reply>> replyMap =
+                replyRepository.findAllBySpostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(r -> r.getSpost().getSpostId()));
+
+        // 4) 파일 한꺼번에 가져오기
+        Map<Integer, List<File>> fileMap =
+                fileRepository.findAllByStylePostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(f -> f.getPost().getSpostId()));
+
+        // 5) 해시태그 한꺼번에 가져오기
+        Map<Integer, List<STYLE_Posthash>> hashtagMap =
+                posthashRepository.findAllByPostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(h -> h.getPostId().getSpostId()));
+
+        // 6) 한번에 DTO 변환
+        return posts.stream()
+                .map(post -> {
+                    List<STYLE_Like> likes = likeMap.getOrDefault(post.getSpostId(), List.of());
+                    List<STYLE_Reply> replies = replyMap.getOrDefault(post.getSpostId(), List.of());
+                    List<File> files = fileMap.getOrDefault(post.getSpostId(), List.of());
+                    List<STYLE_Posthash> hashtags = hashtagMap.getOrDefault(post.getSpostId(), List.of());
+
+                    return StyleConvertToDTO(post, likes, replies, files, hashtags);
+                })
+                .toList();
     }
 
     public List<StylePostDTO> getAllPostsOrderByViewsDTO() {
+
+        // 1) 조회수순 포스트 목록 조회
         List<STYLE_post> posts = postRepository.findAllOrderByViewCountDesc();
-        return convertToDTO(posts);
+        if (posts.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        // 포스트 ID 목록
+        List<Integer> postIds = posts.stream()
+                .map(STYLE_post::getSpostId)
+                .toList();
+
+        // 2) 좋아요 한 번에 조회(IN)
+        Map<Integer, List<STYLE_Like>> likeMap =
+                likeRepository.findAllBySpostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(l -> l.getSpost().getSpostId()));
+
+        // 3) 댓글 한 번에 조회(IN)
+        Map<Integer, List<STYLE_Reply>> replyMap =
+                replyRepository.findAllBySpostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(r -> r.getSpost().getSpostId()));
+
+        // 4) 파일 한 번에 조회(IN)
+        Map<Integer, List<File>> fileMap =
+                fileRepository.findAllByStylePostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(f -> f.getPost().getSpostId()));
+
+        // 5) 해시태그 한 번에 조회(IN + tag JOIN FETCH)
+        Map<Integer, List<STYLE_Posthash>> hashtagMap =
+                posthashRepository.findAllByPostIds(postIds)
+                        .stream()
+                        .collect(Collectors.groupingBy(h -> h.getPostId().getSpostId()));
+
+        // 6) DTO 변환
+        return posts.stream()
+                .map(post -> {
+
+                    List<STYLE_Like> likes = likeMap.getOrDefault(post.getSpostId(), List.of());
+                    List<STYLE_Reply> replies = replyMap.getOrDefault(post.getSpostId(), List.of());
+                    List<File> files = fileMap.getOrDefault(post.getSpostId(), List.of());
+                    List<STYLE_Posthash> hashtags = hashtagMap.getOrDefault(post.getSpostId(), List.of());
+
+                    return StyleConvertToDTO(post, likes, replies, files, hashtags);
+
+                })
+                .toList();
     }
 
-    private List<StylePostDTO> convertToDTO(List<STYLE_post> posts) {
-        return posts.stream().map(post -> {
-            int likeCount = likeRepository.countBySpost(post);
+    private StylePostDTO StyleConvertToDTO(
+            STYLE_post post,
+            List<STYLE_Like> likes,
+            List<STYLE_Reply> replies,
+            List<File> files,
+            List<STYLE_Posthash> hashtags
+    ) {
 
-            List<String> imageUrls = fileRepository.findAllByPost(post)
-                    .stream().map(File::getPath).toList();
+        return StylePostDTO.builder()
+                .spost_id(post.getSpostId())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .indate(post.getIndate())
+                .viewCount(post.getViewCount())
 
-            return StylePostDTO.builder()
-                    .spost_id(post.getSpostId())
-                    .title(post.getTitle())
-                    .content(post.getContent())
-                    .s_images(imageUrls)
-                    .userid(post.getMember().getUserid())
-                    .profileImg(post.getMember().getProfileImg())
-                    .likeCount(likeCount)
-                    .build();
+                // 이미지 파일 path 리스트
+                .s_images(
+                        files.stream()
+                                .map(File::getPath)      // 이미지 경로
+                                .toList()
+                )
+
+                // 좋아요 개수
+                .likeCount(likes.size())
+
+                // 댓글 개수
+                .replyCount(replies.size())
+
+                // 작성자 정보
+                .userid(post.getMember().getUserid())
+                .profileImg(post.getMember().getProfileImg())
+
+                // 로그인 정보가 없으므로 기본값 설정 (추후 로그인 서비스 연동 시 변경)
+                .liked(false)
+                .followed(false)
+
+                // 해시태그 문자열 리스트
+                .hashtags(
+                        hashtags.stream()
+                                .map(h -> h.getTagId().getWord())
+                                .toList()
+                )
+
+                .build();
+    }
+
+
+    public List<Map<String, Object>> getHotTags() {
+        // 1. 인기 해시태그 조회
+        List<Object[]> hotTags = posthashRepository.findHotTags();
+        List<String> tagNames = hotTags.stream()
+                .map(row -> (String) row[0])
+                .limit(10)
+                .toList();
+
+        // 2. 태그별 포스트와 태그를 한 번에 fetch join으로 조회
+        List<STYLE_Posthash> postHashes = posthashRepository.findByTagWordsWithFetch(tagNames);
+
+        // 3. 포스트 ID별 그룹화
+        Map<String, List<STYLE_post>> tagPostMap = new HashMap<>();
+        for (STYLE_Posthash ph : postHashes) {
+            String tagWord = ph.getTagId().getWord();
+            STYLE_post post = ph.getPostId();
+
+            tagPostMap.computeIfAbsent(tagWord, k -> new ArrayList<>());
+            List<STYLE_post> posts = tagPostMap.get(tagWord);
+            if (posts.size() < 10) {  // 태그별 상위 10개 제한
+                posts.add(post);
+            }
+        }
+
+        // 4. 포스트 ID 목록 준비
+        List<Integer> allPostIds = tagPostMap.values().stream()
+                .flatMap(List::stream)
+                .map(STYLE_post::getSpostId)
+                .distinct()
+                .toList();
+
+        // 5. 파일, 좋아요 한 번에 조회
+        Map<Integer, List<String>> fileMap = fileRepository.findByPostIds(allPostIds).stream()
+                .collect(Collectors.groupingBy(
+                        f -> f.getPost().getSpostId(),
+                        Collectors.mapping(File::getPath, Collectors.toList())
+                ));
+
+        Map<Integer, Long> likeMap = likeRepository.findByPostIds(allPostIds).stream()
+                .collect(Collectors.groupingBy(
+                        l -> l.getSpost().getSpostId(),
+                        Collectors.counting()
+                ));
+
+        // 6. 최종 DTO 생성
+        return tagNames.stream().map(tagName -> {
+            List<STYLE_post> posts = tagPostMap.getOrDefault(tagName, List.of());
+            List<Map<String, Object>> postDtos = posts.stream()
+                    .map(post -> Map.of(
+                            "spost_id", post.getSpostId(),
+                            "s_images", fileMap.getOrDefault(post.getSpostId(), List.of()),
+                            "userid", post.getMember().getUserid(),
+                            "profileImg", post.getMember().getProfileImg(),
+                            "likeCount", likeMap.getOrDefault(post.getSpostId(), 0L)
+                    ))
+                    .toList();
+
+            return Map.of(
+                    "tagName", tagName,
+                    "posts", postDtos
+            );
         }).toList();
     }
 
-    public List<Map<String, Object>> getHotTags() {
-        List<Object[]> hotTags = posthashRepository.findHotTags();
 
-        List<Map<String, Object>> result = new ArrayList<>();
+    public Integer getCurrentMemberId() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
 
-        // 상위 10개 태그만 처리
-        hotTags.stream().limit(10).forEach(row -> {
-            String tagName = (String) row[0];
+        if (authentication == null || !(authentication.getPrincipal() instanceof MemberDTO)) {
+            return null; // 로그인 안된 경우
+        }
 
-            // 해당 태그의 게시물 가져오기
-            List<STYLE_post> posts = postRepository.findPostsByTag(tagName);
-
-            List<Map<String, Object>> postDtos = posts.stream()
-                    .limit(10)
-                    .map(post -> {
-                        Map<String, Object> p = new HashMap<>();
-                        p.put("spost_id", post.getSpostId());
-                        p.put("s_images",
-                                fileRepository.findByPost(post)
-                                        .stream()
-                                        .map(File::getPath)
-                                        .toList()
-                        );
-                        p.put("userid", post.getMember().getUserid());
-                        p.put("profileImg", post.getMember().getProfileImg());
-                        p.put("likeCount", post.getLikes().size());
-                        return p;
-                    }).toList();
-
-            Map<String, Object> tagMap = new HashMap<>();
-            tagMap.put("tagName", tagName);
-            tagMap.put("posts", postDtos);
-
-            result.add(tagMap);
-        });
-
-        return result;
+        MemberDTO member = (MemberDTO) authentication.getPrincipal();
+        return member.getMember_id(); // MemberDTO에서 memberId getter
     }
 
-    public List<Map<String, Object>> getHotUsers() {
 
-        // 팔로워 많은 사람 기준 인기유저 선정
+    public List<Map<String, Object>> getHotUsers() {
+        // 1. 모든 회원 조회
         List<Member> allMembers = memberRepository.findAll();
 
-        List<Map<String, Object>> result = allMembers.stream()
-                .map(member -> {
-                    int followerCount = followRepository.findByEndMember(member).size();
+        // 2. 회원 ID 목록
+        List<Integer> memberIds = allMembers.stream()
+                .map(Member::getMember_id)
+                .toList();
 
-                    // 유저 게시물 4개
-                    List<STYLE_post> posts = postRepository
-                            .findAllByMember_UseridOrderByIndateDesc(member.getUserid())
+        // 3. 팔로워 수 한 번에 조회
+        Map<Integer, Long> followerCountMap = followRepository.countByEndMemberIn(memberIds)
+                .stream()
+                .collect(Collectors.toMap(
+                        StyleFollowerCountDTO::getMemberId,
+                        StyleFollowerCountDTO::getFollowerCount
+                ));
+
+        // 4. 게시글 + 회원 정보 한 번에 조회
+        List<STYLE_post> posts = postRepository.findAllWithMemberByMemberIds(memberIds);
+
+        // 5. 게시글 ID 목록
+        List<Integer> postIds = posts.stream().map(STYLE_post::getSpostId).toList();
+
+        // 6. 파일 한 번에 조회 (별도)
+        Map<Integer, List<String>> fileMap = fileRepository.findByPostIds(postIds).stream()
+                .collect(Collectors.groupingBy(
+                        f -> f.getPost().getSpostId(),
+                        Collectors.mapping(File::getPath, Collectors.toList())
+                ));
+
+        // 7. 회원별 게시글 매핑
+        Map<Integer, List<STYLE_post>> memberPostMap = posts.stream()
+                .collect(Collectors.groupingBy(p -> p.getMember().getMember_id()));
+
+        // 8. 팔로우 상태 조회
+        Integer currentMemberId = getCurrentMemberId();
+        Set<Integer> followingSet = followRepository.findAllByStartMemberAndEndMembers(currentMemberId, memberIds)
+                .stream()
+                .map(f -> f.getEndMember().getMember_id())
+                .collect(Collectors.toSet());
+
+        // 9. DTO 생성 + 정렬 + 상위 10명
+        return allMembers.stream()
+                .map(member -> {
+                    List<STYLE_post> memberPosts = memberPostMap.getOrDefault(member.getMember_id(), List.of())
                             .stream().limit(10).toList();
 
-                    List<Map<String, Object>> postDto = posts.stream()
+                    List<Map<String, Object>> postDto = memberPosts.stream()
                             .map(p -> Map.of(
                                     "spost_id", p.getSpostId(),
-                                    "s_images", fileRepository.findAllByPost(p)
-                                            .stream().map(File::getPath).toList()
+                                    "s_images", fileMap.getOrDefault(p.getSpostId(), List.of())
                             ))
                             .toList();
 
-                    Map<String, Object> m = new HashMap<>();
-                    m.put("userid", member.getUserid());
-                    m.put("profileImg", member.getProfileImg());
-                    m.put("followerCount", followerCount);
-                    m.put("posts", postDto);
-
-                    return m;
+                    return Map.of(
+                            "userid", member.getUserid(),
+                            "profileImg", member.getProfileImg(),
+                            "followerCount", followerCountMap.getOrDefault(member.getMember_id(), 0L),
+                            "isFollowing", followingSet.contains(member.getMember_id()),
+                            "posts", postDto
+                    );
                 })
-                .sorted((a, b) ->
-                        ((Integer) b.get("followerCount")) - ((Integer) a.get("followerCount"))
-                )
-                .limit(10) // 상위 10명만
+                .sorted((a, b) -> Long.compare((Long) b.get("followerCount"), (Long) a.get("followerCount")))
+                .limit(10)
                 .toList();
-
-        return result;
     }
 
 
 
 }
+
